syntax = "proto3";

package post;

option java_package = "com.proto.post";
option java_multiple_files = true;

message MediaFile {
  string filename = 1;
  bytes data = 2;
  string content_type = 3;
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  repeated MediaFile multimedia = 4;
  string author_id = 5;
  string category_id = 6;
  bool is_resolved = 7;
  string created_at = 8;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  repeated MediaFile multimedia = 3;
  string author_id = 4;
  string category_id = 5;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  Post post = 1;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  string id = 1;
}

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}